--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <article id="root"></article>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
